# cookietemple

./: .bandit  .bandit.yml  .buildinfo  .coafile  .cookietemple  .cookietemple.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  NOTICE  README.rst  adding_new_templates.html  bandit  bump_version.html  changelog.html  code_of_conduct.html  codecov.yml  community.html  config.html  contributing.html  cookietemple.cfg  cookietemple.drawio  create.html  faq.html  genindex.html  github_support.html  index.html  installation.html  (+20 more)
.dependabot/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md  new_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md  pull_request_template.md
.github/workflows/: bandit.yml  build_docs.yml  build_package.yml  check_no_SNAPSHOT_master.yml  check_patch_release_master_only.yml  codecov.yml  create_cli_java.yml  create_cli_python.yml  create_gui_java.yml  create_lib_cpp.yml  create_pub_thesis_latex.yml  create_web_python_flask.yml  flake8_linting.yml  pr_to_master_from_patch_release_only.yml  pr_to_master_only_from_dev.yml  publish_docs.yml  publish_package.yml  run_bandit.yml  run_codecov.yml  run_cookietemple_lint.yml  run_flake8_linting.yml  run_mypy.yml  run_tests.yml  run_tox_testsuite.yml  sync_project.yml  test_cookietemple.yml  tox_testsuite.yml
_sources/: community.rst.txt  config.rst.txt  contributing.rst.txt  create.rst.txt  index.rst.txt  list_info.rst.txt  sync.rst.txt
_sources/available_templates/: available_templates.rst.txt  cli_python.rst.txt  gui_java.rst.txt  lib_cpp.rst.txt  web_website_python.rst.txt
_static/: custom_cookietemple.css  documentation_options.js
available_templates/: available_templates.html  cli_java.html  cli_python.html  gui_java.html  lib_cpp.html  pub_thesis_latex.html  web_website_python.html
cookietemple/: __init__.py  __main__.py  cli.py  cookietemple_cli.py
cookietemple/bump_version/: bump_version.cfg  bump_version.py  file1_py.py  file2_java.java
cookietemple/cli_tools/: custom_click.py
cookietemple/common/: levensthein_dist.py  load_yaml.py  suggest_similar_commands.py  version.py
cookietemple/config/: config.py
cookietemple/config_command/: config.py
cookietemple/create/: TemplateCreator.py  create.py  create_config.py  create_templates.py  github_support.py  template_creator.py  test_history.py
cookietemple/create/templates/cli/cli_python/{{ cookiecutter.project_slug_no_hyphen }}/: .flake8  .pre-commit-config.yaml  README.rst  codecov.yml  cookietemple.cfg  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test.txt  testsync.txt
cookietemple/create/templates/cli/cli_python/{{ cookiecutter.project_slug_no_hyphen }}/.github/: dependabot.yml  release-drafter.yml
cookietemple/create/templates/cli/cli_python/{{ cookiecutter.project_slug_no_hyphen }}/.github/workflows/: build_package.yml  constraints.txt  publish_package.yml  run_bandit.yml  run_codecov.yml  run_flake8_linting.yml  run_tests.yml  run_tox_testsuite.yml
cookietemple/create/templates/cli/cli_python/{{ cookiecutter.project_slug_no_hyphen }}/docs/: contributing.rst  installation.rst  modules.rst  reference.rst  usage.rst
cookietemple/create/templates/cli/cli_python/{{ cookiecutter.project_slug_no_hyphen }}/makefiles/: Linux.mk  Windows.mk
cookietemple/create/templates/cli/cli_python/{{ cookiecutter.project_slug_no_hyphen }}/src/{{ cookiecutter.project_slug_no_hyphen }}/: __main__.py
cookietemple/create/templates/cli/cli_python/{{ cookiecutter.project_slug_no_hyphen }}/tests/: __init__.py  test_main.py
cookietemple/create/templates/cli/cli_python/{{ cookiecutter.project_slug_no_hyphen }}/{{ cookiecutter.project_slug_no_hyphen }}/: __init__.py  __main__.py
cookietemple/create_template/: create.py  create_config.py  create_general_options.py  mytestdict.py  pumpingercan.py
cookietemple/custom_cli/: click.py  custom_click.py  levensthein_dist.py  questionary.py  questionary_style.py
cookietemple/custom_cookietemple_cli/: custom_click.py  levensthein_dist.py  suggest_similar_commands.py
cookietemple/info/: info.py  levensthein_dist.py
cookietemple/lint/: TemplateLinter.py  lint.py  template_linter.py
cookietemple/linting/: PipelineLint.py  TemplateLinter.py  lint.py
cookietemple/list/: list.py
cookietemple/list_templates/: list.py
cookietemple/package_dist/: warp.py
cookietemple/sync/: create_pr_demo.py  create_template_from_ct_yml.py  sync.py  sync_test_cli_java.yml  sync_test_cli_python.yml  sync_test_gui_java.yml  sync_test_pub_thesis.yml  sync_test_web_python.yml
cookietemple/synchronization/: sync.py
cookietemple/templates/: test.txt  test_2.txt
cookietemple/upgrade/: upgrade.py
cookietemple/util/: click_util.py  cookietemple_template_struct.py  dict_util.py  dir_util.py  docs_util.py  rich.py  templates_util.py  yaml_util.py
cookietemple/warp/: warp.py
docs/: Makefile  adding_new_templates.rst  available_templates.rst  bump_version.rst  code_of_conduct.rst  community.rst  conf.py  config.rst  contributing.rst  create.rst  faq.rst  github_support.rst  index.rst  installation.rst  lint.rst  list_info.rst  make.bat  modules.rst  reference.rst  requirements.txt  sync.rst  troubleshooting.rst  upgrade.rst  usage.rst  warp.rst
docs/_static/: custom_cookietemple.css
docs/available_templates/: available_templates.rst  cli_java.rst  cli_python.rst  gui_java.rst  lib_cpp.rst  pub_thesis_latex.rst  web_website_python.rst
makefiles/: Linux.mk  Windows.mk
python_boilerplate/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
python_boilerplate/docs/: Makefile  (+5 more)
tests/: __init__.py  test_bump_version.py  test_cookietemple.py  test_info_command.py  test_list_command.py  test_main.py
(+487 files in other folders)
