[tool.poetry]
name = "cookietemple"
version = "1.4.2"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "A cookiecutter based project template creation tool supporting several domains and languages with advanced linting, syncing and standardized workflows to get your project kickstarted in no time."
authors = ["Philipp Ehmele <philipp_ehm@protonmail.com>", "Lukas Heumos <lukas.heumos@posteo.net>"]
license = "Apache2.0"
readme = "README.rst"
homepage = "https://cookietemple.com"
repository = "https://github.com/cookiejar/cookietemple"
documentation = "https://cookietemple.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "cookietemple" },
]

[tool.poetry.dependencies]
python = ">=3.7.0,<4"
click = "^8.0.1"
rich = "^10.2.2"
cookiecutter = "2.1.1"
pygithub= "^1.54.1"
GitPython= "^3.1.17"
cffi= "^1.14.5"
cryptography= ">=3.4.7,<38.0.0"
requests= "^2.25.1"
packaging= ">=20.9,<22.0"
appdirs= "^1.4.4"
questionary= "^1.9.0"
pynacl= "^1.4.0"
"ruamel.yaml" = "^0.17.4"
PyNaCl = "1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.5"}
safety = "2.2.0"
mypy = "^0.961"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.17.0"
flake8 = "^5.0.4"
black = "^22.8.0"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.13.0"
darglint = "^1.8.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.1.0"
sphinx-click = "^3.1.0"
Pygments = "^2.12.0"
twine= "^3.8.0"
types-pkg-resources = "^0.1.3"
types-requests = "^2.27.30"
types-attrs = "^19.1.0"
pyupgrade = "^2.31.0"
furo = "^2022.4.7"

[tool.poetry.scripts]
cookietemple = "cookietemple.__main__:main"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
exclude = "templates"

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
skip="templates"
profile = "black"

[tool.coverage.paths]
source = ["cookietemple", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cookietemple"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
